--- a/home.css
+++ b/home.css
@@ -208,3 +208,9 @@ h1 {
   color: white;
   cursor: grab;
 }
+#viu{
+  position: relative;
+  z-index: -10;
+  width: 500px;
+  transform: translate(350px,-50px);
+}
